Invalid (pink) shader when using wireframe node [ Eevee ] #68843

Closed
opened 2019-08-19 22:55:20 +02:00 by Gleb Koval · 17 comments

System Information
Operating system: MacOS 10.15 Beta (19A526h)
Graphics card: Radeon Pro 560

Blender Version
Broken: 2.81, 2019-08-19, 10001d9099
Broken: 2.80, 2019-07-29, f6cb5f5449

Short description of error
When using wireframe input node shader becomes invalid (pink) when using Eevee. I think this is a MacOS specific issue given that a user with exactly the save version of Blender was not able to replicate this on Windows.

Exact steps for others to reproduce the error
Switch to Eevee renderer.
Create a shader which uses the "Wireframe" node. A shader that I have found to definitely be broken is this: image.png .
Try to view an object with that shader in either Look dev ( image.png ) or Rendered ( image.png ). I have only found the shader to work when using Cycles.

**System Information** Operating system: MacOS 10.15 Beta (19A526h) Graphics card: Radeon Pro 560 **Blender Version** Broken: 2.81, 2019-08-19, 10001d909905 Broken: 2.80, 2019-07-29, f6cb5f54494e **Short description of error** When using wireframe input node shader becomes invalid (pink) when using Eevee. I think this is a MacOS specific issue given that a user with exactly the save version of Blender was not able to replicate this on Windows. **Exact steps for others to reproduce the error** Switch to Eevee renderer. Create a shader which uses the "Wireframe" node. A shader that I have found to definitely be broken is this: ![image.png](https://archive.blender.org/developer/F7673831/image.png) . Try to view an object with that shader in either Look dev ( ![image.png](https://archive.blender.org/developer/F7673836/image.png) ) or Rendered ( ![image.png](https://archive.blender.org/developer/F7673838/image.png) ). I have only found the shader to work when using Cycles.
Author

Added subscriber: @Glebko

Added subscriber: @Glebko

#69376 was marked as duplicate of this issue

#69376 was marked as duplicate of this issue

Added subscriber: @phaendar

Added subscriber: @phaendar

Added subscriber: @GpuDevil

Added subscriber: @GpuDevil

Does not reproduce on Ubuntu Linux with Blender-2.81 77f01748e7

Operating System: Ubuntu 19.04 x86-64
CPU: Intel i5-6500
GPU: NVIDIA GTX 960

Screenshot from 2019-08-23 17-45-42.png

Does not reproduce on Ubuntu Linux with Blender-2.81 77f01748e7 Operating System: Ubuntu 19.04 x86-64 CPU: Intel i5-6500 GPU: NVIDIA GTX 960 ![Screenshot from 2019-08-23 17-45-42.png](https://archive.blender.org/developer/F7695015/Screenshot_from_2019-08-23_17-45-42.png)
Author

I think that just confirms it is a MacOS issue as neither windows nor Linux users have been able to reproduce this...

I think that just confirms it is a MacOS issue as neither windows nor Linux users have been able to reproduce this...

Added subscriber: @jbianchini

Added subscriber: @jbianchini

I have the same issue on Windows 10 with Blender 2.8 and 2.81 (commit date: 2019-08-28 03:44).
system-info.txt
The error message in the system console is:

"GPUShader: linking error:
Type mismatch: Type of gl_ClipDistance different between shaders.
Out of resource error."

See attached the system-info regarding to the Windows 10 laptop I'm using.
Later today I'll confirm if it is happening on my Linux OS laptop as well.

I have the same issue on Windows 10 with Blender 2.8 and 2.81 (commit date: 2019-08-28 03:44). [system-info.txt](https://archive.blender.org/developer/F7707987/system-info.txt) The error message in the system console is: "GPUShader: linking error: Type mismatch: Type of gl_ClipDistance different between shaders. Out of resource error." See attached the system-info regarding to the Windows 10 laptop I'm using. Later today I'll confirm if it is happening on my Linux OS laptop as well.

Added subscriber: @dark999

Added subscriber: @dark999

@jbianchini just to notice you, your laptop use an antique intel drivers, you can try to solve your issue updating UHD 620 drivers from here As you can see latest version is 26.20.100.7000, you use 23.20.16.5018

Thank You

all work as expected on linux Blender 2.80 f6cb5f5449 (Stable) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.17 and Blender 2.81 f88022b96f
image.png

@jbianchini just to notice you, your laptop use an `antique` intel drivers, you can try to solve your issue updating UHD 620 drivers from [`here` ](https://downloadcenter.intel.com/search?keyword=UHD+620) As you can see latest version is 26.20.100.7000, you use 23.20.16.5018 Thank You all work as expected on linux Blender 2.80 f6cb5f54494e (Stable) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.17 and Blender 2.81 f88022b96f3a ![image.png](https://archive.blender.org/developer/F7708572/image.png)

@dark999 I have updated the drivers and it's not working yet. Thank you for the tip!
By the way, I've done a general update on the drivers.

For your information, It's working fine on my laptop with Linux OS. The issue is related only to the laptop with Windows 10.
See attached the new system-info file.

system-info.txt

@dark999 I have updated the drivers and it's not working yet. Thank you for the tip! By the way, I've done a general update on the drivers. For your information, It's working fine on my laptop with Linux OS. The issue is related only to the laptop with Windows 10. See attached the new system-info file. [system-info.txt](https://archive.blender.org/developer/F7709447/system-info.txt)
Member

Added subscribers: @hboteler, @lichtwerk

Added subscribers: @hboteler, @lichtwerk

This issue was referenced by d288776cef

This issue was referenced by d288776cef7d69970f050800d3b230349fd08865

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-07 00:03:58 +02:00

Added subscriber: @Dimitar

Added subscriber: @Dimitar

I am having a similar issue on windows 10x64 with UHD 620 graphics. I've tried Blender 2.80, latest 2.81 nightly and latest 2.82 nightly on a dell inspiron with latest drivers installed.

image.png

I am having a similar issue on windows 10x64 with UHD 620 graphics. I've tried Blender 2.80, latest 2.81 nightly and latest 2.82 nightly on a dell inspiron with latest drivers installed. ![image.png](https://archive.blender.org/developer/F7888366/image.png)

@Dimitar, that's most likely a different underlying issue. You can create a new report, and be sure to check you have the latest graphics drivers and attach any errors printed in the console (opened with Window > Show Console).

@Dimitar, that's most likely a different underlying issue. You can create a new report, and be sure to check you have the latest graphics drivers and attach any errors printed in the console (opened with Window > Show Console).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68843
No description provided.