Fix T68843: wireframe node in Eevee fails on macOS

Differential Revision: https://developer.blender.org/D5712